--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -244,7 +244,7 @@ displayvote = [
 ]
 newgui vote [ displayvote ]
 
-maplists = [ duelmaps storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps trialmaps trialmaps ]
+maplists = [ duelmaps duelmaps storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps trialmaps trialmaps ]
 maplistsize = 29 //adjust if desired
 mapindex = 0
 maplist = ""
