map selection/rotation stuff
Former-commit-id: ea992e4afb51d1e52608e74039e72c68b8ae8ee8

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -245,7 +245,7 @@ displayvote = [
 newgui vote [ displayvote ]
 
 maplists = [ duelmaps duelmaps storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps trialmaps trialmaps ]
-maplistsize = 29 //adjust if desired
+maplistsize = 28 //adjust if desired
 mapindex = 0
 maplist = ""
 mappath = ""
@@ -290,7 +290,7 @@ newgui game [
 		] [
 			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapcur) (strcmp (concatword "maps/" $curmap) $mapcur)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapcur)))])
 		]
-		if (< $mapnum 0) [ mapnum = $l; mapextra = $mapname ]
+		if (&& (< $mapnum 0) (= (strcmp "maps/untitled" $mapname) 0)) [ mapnum = $l; mapextra = $mapname ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		showngamegui = 1
@@ -298,8 +298,13 @@ newgui game [
 	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
 	guilist [
 		guilist [
-			guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
-			guilist [ guifont "sub" [ guitext "^faselected on " ]; guifont "default" [ guitext $mapcur ] ]
+			if (< $lastmode 0) [
+				guifont "default" [ guitext "game select" ]
+				guifont "sub" [ guitext "^faplease select a mode and map to continue" ]
+			] [
+				guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
+				guilist [ guifont "sub" [ guitext "^faselected on " ]; guifont "default" [ guitext $mapcur ] ]
+			]
 			guistrut 1
 			guilist [
 				guilist [
@@ -363,35 +368,53 @@ newgui game [
 			]
 		]
 		guistrut 2
-		guilist [
+		guilist [ guistrut (+ $maplistsize 4) ]
+		if (>= $lastmode 0) [
 			guilist [
-				guistrut 7
-				guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
-				guistrut 1
-				guifont "super" [ guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) ]
-			]
-			guilist [
-				mapscount = $maplistsize
-				//if (> $hasoctapaks 0) [ mapscount = (- $mapscount 2) ]
-				nummaps = (listlen $maplist)
-				mapindex = (min (max 0 (- $nummaps $mapscount)) $mapindex) //safeguard
-				mapnum = (min $mapnum $nummaps)
 				guilist [
-					guilist [ guistrut 28 ]
-					loop i $nummaps [
-						if (&& (>= $i $mapindex) (< (- $i $mapindex) $mapscount)) [
-							curmap = (at $maplist $i)
-							if (strcmp $curmap "?") [
-								guilist [
-									guiradio "" mapnum $i
-									mapextraval = $mapextra
-									guifield mapextraval 24 [mapextra = $mapextraval]
+					guistrut 7
+					guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
+					guistrut 1
+					guifont "super" [ guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) ]
+				]
+				guilist [
+					mapscount = $maplistsize
+					//if (> $hasoctapaks 0) [ mapscount = (- $mapscount 2) ]
+					nummaps = (listlen $maplist)
+					mapindex = (min (max 0 (- $nummaps $mapscount)) $mapindex) //safeguard
+					mapnum = (min $mapnum $nummaps)
+					guilist [
+						guilist [ guistrut 28 ]
+						break = 0
+						guilist [ guistrut 9; guifont "radar" [ guitext "^fw^feavailable maps" ] ]
+						loopwhile i $nummaps [if (= $break 0) [ 1 ] [ 0 ]] [
+							if (&& (>= $i $mapindex) (< (- $i $mapindex) $mapscount)) [
+								curmap = (at $maplist $i)
+								if (strcmp $curmap "?") [
+									if (= $modeselected 3) [
+										guistrut (- $mapscount $i)
+										nummaps = 1
+										break = 1
+									] [
+										guilist [ guistrut 7; guifont "radar" [ guitext "^fa^femaps not in the rotation" ] ]
+										guilist [
+											guiradio "" mapnum $i
+											mapextraval = $mapextra
+											guifield mapextraval 24 [mapextra = $mapextraval]
+										]
+									]
+								] [ guiradio $curmap mapnum $i ]
+							] [
+								if (&& (strcmp $curmap "?")  (= $modeselected 3)) [
+									guistrut (- $mapscount $i)
+									nummaps = 1
+									break = 1
 								]
-							] [ guiradio $curmap mapnum $i ]
+							]
 						]
 					]
+					guislider mapindex 0 (max (- $nummaps $mapscount) 0) [] 1
 				]
-				if (< $mapscount $nummaps) [ guislider mapindex 0 (- $nummaps $mapscount) [] 1 ]
 			]
 		]
 	]
@@ -432,7 +455,7 @@ newgui game [
 					vardef trialweapon			"time-trial weapon"
 					vardef spawngrenades		"spawn grenades"
 				]
-				guistrut 1
+				guistrut 2
 				guilist [
 					varfld selfdamage 16
 					varfld trialdamage 16
@@ -480,7 +503,7 @@ newgui game [
 				]
 			]
 		]
-		guistrut 2
+		guistrut 3
 		guilist [
 			guilist [
 				guilist [
@@ -514,7 +537,7 @@ newgui game [
 					vardef instadelay			"insta spawn delay"
 					vardef trialdelay			"time-trial spawn delay"
 				]
-				guistrut 1
+				guistrut 2
 				guilist [
 					varfld maprotate 16
 					varfld spawnrotate 16
