--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -30,8 +30,11 @@
 // flarelights 0
 // floorcurb 5.0
 // floorz 0.867
-// fog 4200
+// fog 2800
 // fogcolour 0x400800
+// fogdomeheight 0.0
+// fogdomemax 1.0
+// fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
