--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -32,6 +32,9 @@
 // floorz 0.867
 // fog 1000
 // fogcolour 0xBD7408
+// fogdomeheight 0.0
+// fogdomemax 0.65
+// fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
