--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -32,6 +32,9 @@
 // floorz 0.867
 // fog 250
 // fogcolour 0x000000
+// fogdomeheight 0.0
+// fogdomemax 1.0
+// fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
