tweaked fogdomeheight until maps get resaved
Former-commit-id: 5bc39162d9a89e033542ed973f5ee900d57ca5df

--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -32,7 +32,7 @@
 // floorz 0.867
 // fog 250
 // fogcolour 0x000000
-// fogdomeheight 0.0
+fogdomeheight -0.5
 // fogdomemax 1.0
 // fogdomemin 0.0
 // grassanimmillis 3000
