--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -32,7 +32,7 @@
 // floorz 0.867
 // fog 800
 // fogcolour 0xCCCCCC
-// fogdomeheight 0.0
+fogdomeheight -0.5
 // fogdomemax 1.0
 // fogdomemin 0.0
 // grassanimmillis 3000
