--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -32,7 +32,7 @@
 // floorz 0.867
 // fog 1000
 // fogcolour 0xBD7408
-// fogdomeheight 0.0
+fogdomeheight -0.5
 // fogdomemax 0.65
 // fogdomemin 0.0
 // grassanimmillis 3000
