--- a/data/maps/firehouse.cfg
+++ b/data/maps/firehouse.cfg
@@ -32,7 +32,7 @@
 // floorz 0.867
 // fog 600
 // fogcolour 0x202020
-// fogdomeheight 0.0
+fogdomeheight -0.5
 // fogdomemax 1.0
 // fogdomemin 0.0
 // grassanimmillis 10000
