increase chances of wall running vs. kicking, water-ladder helpers for darkness and venus
Former-commit-id: 6082e5af4f523ee996e6d1ef31586665fc9f18f5

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -32,8 +32,8 @@ demo				= [ stopdemo; start $arg1 0 0x00 ]; complete demo . dmo
 lobby				= [ start $arg1 1 0x0000 ]; mapcomplete lobby
 edit				= [ start $arg1 2 0x0000 ]; mapcomplete edit
 story				= [ start $arg1 3 0x0000 ]; mapcomplete story
-deathmatch			= [ start $arg1 4 0x0000 ]; mapcomplete deathmatch
-instagib			= [ start $arg1 4 0x0004 ]; mapcomplete instagib
+deathmatch			= [ start $arg1 4 0x0000 ]; mapcomplete deathmatch; dm = [ deathmatch $arg1 ]
+instagib			= [ start $arg1 4 0x0004 ]; mapcomplete instagib; insta = [ instagib $arg1 ]
 arena				= [ start $arg1 4 0x0020 ]; mapcomplete arena
 teamdm				= [ start $arg1 4 0x0002 ]; mapcomplete teamdm
 teamarena			= [ start $arg1 4 0x0022 ]; mapcomplete teamarena
@@ -48,16 +48,16 @@ multistfarena		= [ start $arg1 5 0x0023 ]; mapcomplete multistfarena
 instastf			= [ start $arg1 5 0x0006 ]; mapcomplete instastf
 ctf					= [ start $arg1 6 0x0002 ]; mapcomplete ctf
 ctfarena			= [ start $arg1 6 0x0022 ]; mapcomplete ctfarena
-multictf			= [ start $arg1 6 0x0003 ]; mapcomplete multictf
-multictfarena		= [ start $arg1 6 0x0023 ]; mapcomplete multictfarena
+multictf			= [ start $arg1 6 0x0003 ]; mapcomplete multictf; mctf = [ multictf $arg1 ]
+multictfarena		= [ start $arg1 6 0x0023 ]; mapcomplete multictfarena; mctfarena = [ multictfarena $arg1 ]
 instactf			= [ start $arg1 6 0x0006 ]; mapcomplete instactf
 duel				= [ start $arg1 4 0x0008 ]; mapcomplete duel
 duelarena			= [ start $arg1 4 0x0028 ]; mapcomplete duelarena
 instaduel			= [ start $arg1 4 0x000C ]; mapcomplete instaduel
-survivor			= [ start $arg1 4 0x0010 ]; mapcomplete survivor
+survivor			= [ start $arg1 4 0x0010 ]; mapcomplete survivor; lms = [ survivor $arg1 ]
 survivorarena		= [ start $arg1 4 0x0030 ]; mapcomplete survivorarena
 instasurvivor		= [ start $arg1 4 0x0014 ]; mapcomplete instasurvivor
-timetrial			= [ start $arg1 7 0x0000 ]; mapcomplete timetrial
+timetrial			= [ start $arg1 7 0x0000 ]; mapcomplete timetrial; trial = [ timetrial $arg1 ]
 trialarena			= [ start $arg1 7 0x0020 ]; mapcomplete trialarena
 instatrial			= [ start $arg1 7 0x0004 ]; mapcomplete instatrial
 
