--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -32,6 +32,9 @@
 // floorz 0.867
 // fog 1000
 // fogcolour 0xCCCCCC
+// fogdomeheight 0.0
+// fogdomemax 1.0
+// fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
@@ -60,7 +63,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-numplayers 4
+// numplayers 4
 // obitdeath ""
 // obitwater ""
 // refractfog 1
