made deadsimple a koth map, disable spawndelay in non-gameplay modes
Former-commit-id: 6978941507dd59fe079056e05cbdc89fd20f72a7

--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -32,6 +32,9 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// fogdomeheight 0.0
+// fogdomemax 0.0
+// fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
@@ -80,13 +83,13 @@
 // spinsky 10.0
 // stairheight 4.1
 // stepspeed 1.0
-// vertwater 1
+// vertwater 0
 // wallz 0.2
-// watercolour 0x103060
+// watercolour 0x010101
 // waterfallcolour 0x000000
-// waterfog 150
+// waterfog 10
 // waterlod 1
-// waterspec 150
+// waterspec 40
 // watersubdiv 3
 // yawcloudlayer 0
 // yawclouds 0
