game menu improvements
Former-commit-id: 62f656b3c3a014adb6522a601264f10567ebb8c8

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -269,30 +269,31 @@ newgui game [
 				mappath = (concat $mappath (concatword "maps/" $lcurmap))
 			]
 		]
-		l = -1
+		maplist = (concat $maplist "*")
+		mappath = (concat $mappath "*");
 		loopfiles lcurmap maps bgz [
 			if (< (listfind mcurmap $maplist [strcmp $mcurmap $lcurmap]) 0) [
-				if (< $l 0) [ maplist = (concat $maplist "?"); mappath = (concat $mappath "?"); l = (- (listlen $maplist) 1) ]
 				maplist = (concat $maplist $lcurmap)
 				mappath = (concat $mappath (concatword "maps/" $lcurmap))
 			]
 		]
 		if (&& (> $hasoctapaks 0) (> $mapocta 0)) [
 			loopfiles lcurmap base ogz [
-				if (< $l 0) [ maplist = (concat $maplist "?"); mappath = (concat $mappath "?"); l = (- (listlen $maplist) 1) ]
 				maplist = (concat $maplist $lcurmap)
 				mappath = (concat $mappath (concatword "base/" $lcurmap))
 			]
 		]
-		if (< $l 0) [ maplist = (concat $maplist "?"); mappath = (concat $mappath "?"); l = (- (listlen $maplist) 1) ]
+		maplist = (concat $maplist "?")
+		mappath = (concat $mappath "?");
 		if (!= $showngamegui 1) [
 			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapname) (strcmp (concatword "maps/" $curmap) $mapname)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapname)))])
 		] [
 			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapcur) (strcmp (concatword "maps/" $curmap) $mapcur)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapcur)))])
 		]
-		if (&& (< $mapnum 0) (= (strcmp "maps/untitled" $mapname) 0)) [ mapnum = $l; mapextra = $mapname ]
+		if (&& (|| (< $mapnum 0) (= (strcmp "*" (at $maplist $mapnum)) 0)) (= (strcmp "maps/untitled" $mapname) 0)) [ mapnum = (- (listlen $maplist) 1); mapextra = $mapname ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
+		mutsbefore = $mutsselected
 		showngamegui = 1
 	]
 	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
@@ -316,24 +317,26 @@ newgui game [
 					guiradio "secure-the-flag"				modeselected 5
 					guiradio "capture-the-flag"				modeselected 6
 					guiradio "time-trial"					modeselected 7
+					guistrut 1
+					guititle "mutators"
 					if (>= $modeselected 3) [
-						guistrut 1
-						guititle "mutators"
 						guibitfield "instagib"				mutsselected 0x0004
-					] [ guistrut 2 ]
-					if (>= $modeselected 4) [
-						guibitfield "multi-sided"			mutsselected 0x0001
-						guibitfield "teamplay"				mutsselected 0x0002
-						guibitfield "arena"					mutsselected 0x0020
-						if (= $modeselected 4) [
-							guibitfield "duel"				mutsselected 0x0008
-							guibitfield "survivor"			mutsselected 0x0010
-						] [ guistrut 2 ]
-					] [ guistrut 5 ]
-					mutstrying = 0
-					loop q 6 [ if (&& (& $mutsselected (<< 1 $q)) (! (& $mutsbefore (<< 1 $q)))) [ mutstrying = (| $mutstrying (<< 1 $q)) ] ]
-					mutsselected = (mutscheck $modeselected $mutsselected $mutstrying)
-					mutsbefore = $mutsselected
+						if (>= $modeselected 4) [
+							guibitfield "multi-sided"			mutsselected 0x0001
+							guibitfield "teamplay"				mutsselected 0x0002
+							guibitfield "arena"					mutsselected 0x0020
+							if (= $modeselected 4) [
+								guibitfield "duel"				mutsselected 0x0008
+								guibitfield "survivor"			mutsselected 0x0010
+							] [ guistrut 2 ]
+						] [ guistrut 5 ]
+					] [ guifont "radar" [ guitext "^fa^fenone available for this mode" ]; guistrut 5 ]
+					if (!= $mutsselected $mutsbefore) [
+						mutstrying = 0
+						loop q 6 [ if (&& (& $mutsselected (<< 1 $q)) (! (& $mutsbefore (<< 1 $q)))) [ mutstrying = (| $mutstrying (<< 1 $q)) ] ]
+						mutsselected = (mutscheck $modeselected $mutsselected $mutstrying)
+						mutsbefore = $mutsselected
+					]
 				]
 				guistrut 2
 				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
@@ -368,44 +371,36 @@ newgui game [
 			]
 		]
 		guistrut 2
-		guilist [ guistrut (+ $maplistsize 4) ]
-		if (>= $lastmode 0) [
-			guilist [
-				guilist [
-					guistrut 7
-					guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
-					guistrut 1
-					guifont "super" [ guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) ]
-				]
+		guilist [
+			if (>= $lastmode 0) [
 				guilist [
 					mapscount = $maplistsize
 					//if (> $hasoctapaks 0) [ mapscount = (- $mapscount 2) ]
-					nummaps = (listlen $maplist)
+					nummaps = (- (listlen $maplist) 1)
 					mapindex = (min (max 0 (- $nummaps $mapscount)) $mapindex) //safeguard
 					mapnum = (min $mapnum $nummaps)
 					guilist [
 						guilist [ guistrut 28 ]
 						break = 0
-						guilist [ guistrut 9; guifont "radar" [ guitext "^fw^feavailable maps" ] ]
+						guilist [ guistrut 8; guifont "sub" [ guitext "^faavailable maps" ] ]
 						loopwhile i $nummaps [if (= $break 0) [ 1 ] [ 0 ]] [
 							if (&& (>= $i $mapindex) (< (- $i $mapindex) $mapscount)) [
 								curmap = (at $maplist $i)
-								if (strcmp $curmap "?") [
+								if (strcmp $curmap "*") [
 									if (= $modeselected 3) [
 										guistrut (- $mapscount $i)
 										nummaps = 1
 										break = 1
-									] [
-										guilist [ guistrut 7; guifont "radar" [ guitext "^fa^femaps not in the rotation" ] ]
-										guilist [
-											guiradio "" mapnum $i
-											mapextraval = $mapextra
-											guifield mapextraval 24 [mapextra = $mapextraval]
-										]
-									]
-								] [ guiradio $curmap mapnum $i ]
+									] [ guilist [ guistrut 7; guifont "radar" [ guitext "^fa^femaps not in the rotation" ] ] ]
+								] [
+									if (strcmp $curmap "?") [
+										guistrut (- $mapscount $i)
+										nummaps = 1
+										break = 1
+									] [ guiradio $curmap mapnum $i ]
+								]
 							] [
-								if (&& (strcmp $curmap "?")  (= $modeselected 3)) [
+								if (&& (strcmp $curmap "*")  (= $modeselected 3)) [
 									guistrut (- $mapscount $i)
 									nummaps = 1
 									break = 1
@@ -413,8 +408,22 @@ newgui game [
 							]
 						]
 					]
+					guistrut 1
 					guislider mapindex 0 (max (- $nummaps $mapscount) 0) [] 1
 				]
+				guilist [ guistrut 11; guifont "radar" [ guitext "^fa^fecustom map" ] ]
+				guilist [
+					guiradio "" mapnum $nummaps
+					mapextraval = $mapextra
+					guifield mapextraval 25 [mapextra = $mapextraval]
+				]
+			] [ guistrut (+ $maplistsize 3) ]
+			guistrut 1
+			guilist [
+				guistrut 12
+				guifont "super" [ guibutton "^fr^fecancel" [cleargui 1] ]
+				guistrut 2
+				guifont "super" [ guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) ]
 			]
 		]
 	]
