--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -95,6 +95,8 @@
 // yawclouds 0
 // yawsky 0
 
+flag_0 = "the flag"
+
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
 texture 1 "textures/watern.jpg"
