--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -32,8 +32,9 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+fogdomecap 1
 // fogdomeheight 0.0
-// fogdomemax 0.0
+fogdomemax 1
 // fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
