--- a/data/maps/panic.cfg
+++ b/data/maps/panic.cfg
@@ -37,9 +37,9 @@
 // grassblend 1.0
 // grassheight 4
 // grassscale 2
-// gravity 40.0
-// impulsespeed 50.0
-// jumpspeed 50.0
+gravity 50.0
+impulsespeed 40.0
+jumpspeed 40.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
 // lavafog 50
