some more map fixes
Former-commit-id: 16347828c6f36ee6353986623834d2a5e06ca137

--- a/data/maps/darkness.cfg
+++ b/data/maps/darkness.cfg
@@ -32,7 +32,7 @@
 // floorz 0.867
 // fog 800
 // fogcolour 0x000000
-fogdomecap 1
+// fogdomecap 1
 // fogdomeheight 0.0
 // fogdomemax 1.0
 // fogdomemin 0.0
@@ -96,7 +96,7 @@ fogdomecap 1
 // yawclouds 0
 // yawsky 0
 
-flag_0 = "the flag"
+"flag_0" = [the flag]
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
