--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -32,6 +32,10 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// fogdomecap 0
+// fogdomeheight -0.5
+// fogdomemax 0.0
+// fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
@@ -60,7 +64,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-numplayers 6
+// numplayers 6
 // obitdeath ""
 // obitwater ""
 // refractfog 1
