game menu fixes
Former-commit-id: 4de284374b9331c3e5512d43a6f796a74630b24f

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -319,24 +319,22 @@ newgui game [
 					guiradio "time-trial"					modeselected 7
 					guistrut 1
 					guititle "mutators"
-					if (>= $modeselected 3) [
+					if (>= $modeselected 1) [
 						guibitfield "instagib"				mutsselected 0x0004
+						guibitfield "arena"					mutsselected 0x0020
 						if (>= $modeselected 4) [
 							guibitfield "multi-sided"			mutsselected 0x0001
 							guibitfield "teamplay"				mutsselected 0x0002
-							guibitfield "arena"					mutsselected 0x0020
 							if (= $modeselected 4) [
 								guibitfield "duel"				mutsselected 0x0008
 								guibitfield "survivor"			mutsselected 0x0010
 							] [ guistrut 2 ]
-						] [ guistrut 5 ]
+						] [ guistrut 4 ]
 					] [ guifont "radar" [ guitext "^fa^fenone available for this mode" ]; guistrut 5 ]
-					if (!= $mutsselected $mutsbefore) [
-						mutstrying = 0
-						loop q 6 [ if (&& (& $mutsselected (<< 1 $q)) (! (& $mutsbefore (<< 1 $q)))) [ mutstrying = (| $mutstrying (<< 1 $q)) ] ]
-						mutsselected = (mutscheck $modeselected $mutsselected $mutstrying)
-						mutsbefore = $mutsselected
-					]
+					mutstrying = 0
+					if (!= $mutsselected $mutsbefore) [ loop q 6 [ if (&& (& $mutsselected (<< 1 $q)) (! (& $mutsbefore (<< 1 $q)))) [ mutstrying = (| $mutstrying (<< 1 $q)) ] ] ]
+					mutsselected = (mutscheck $modeselected $mutsselected $mutstrying)
+					mutsbefore = $mutsselected
 				]
 				guistrut 2
 				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
