UI "hotlink" improvements, map definable and game over-ridable impulse variables; impulsespeed, impulseregen, impulsestyle, impulsemeter, impulsecost, impulsecount, impulseskate
Former-commit-id: f4232ec486fff1be01762ad9a47cac867473b2ba

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -441,10 +441,6 @@ newgui game [
 					vardef regenhealth			"regen health"
 					vardef regenextra			"regen extra"
 					vardef regenflag			"regen flag"
-					vardef impulsemeter			"impulse meter"
-					vardef impulsecost			"impulse cost"
-					vardef impulsecount			"impulse count"
-					vardef impulseskate			"impulse skate"
 					vardef kamikaze				"kamikaze"
 					vardef fraglimit			"frag limit"
 					vardef ctflimit				"ctf score limit"
@@ -461,6 +457,10 @@ newgui game [
 					vardef instaweapon			"instagib weapon"
 					vardef trialweapon			"time-trial weapon"
 					vardef spawngrenades		"spawn grenades"
+					vardef spawnprotect			"spawn protect"
+					vardef spawndelay			"spawn delay"
+					vardef instadelay			"insta spawn delay"
+					vardef trialdelay			"time-trial spawn delay"
 				]
 				guistrut 2
 				guilist [
@@ -475,10 +475,6 @@ newgui game [
 					varfld regenhealth 16
 					varfld regenextra 16
 					varfld regenflag 16
-					varfld impulsemeter 16
-					varfld impulsecost 16
-					varfld impulsecount 16
-					varfld impulseskate 16
 					varfld kamikaze 16
 					varfld fraglimit 16
 					varfld ctflimit 16
@@ -507,6 +503,10 @@ newgui game [
 						guistayopen [ guiimage (format "textures/%1" (at $weapname $trialweapon)) [] 0.5 0 "textures/nothumb" ]
 					]
 					varfld spawngrenades 16
+					varfld spawnprotect 16
+					varfld spawndelay 16
+					varfld instadelay 16
+					varfld trialdelay 16
 				]
 			]
 		]
@@ -522,6 +522,11 @@ newgui game [
 					vardef forcemovecrawl		"force move crawl"
 					vardef forcejumpspeed		"force jump speed"
 					vardef forceimpulsespeed	"force impulse speed"
+					vardef forceimpulsestyle	"force impulse style"
+					vardef forceimpulsemeter	"force impulse meter"
+					vardef forceimpulsecost		"force impulse cost"
+					vardef forceimpulsecount	"force impulse count"
+					vardef forceimpulseskate	"force impulse skate"
 					vardef damagescale			"damage scale"
 					vardef hitpushscale			"hit push scale"
 					vardef deadpushscale		"dead push scale"
@@ -539,10 +544,6 @@ newgui game [
 					vardef itemspawnstyle		"item spawn style"
 					vardef regendelay			"regen delay"
 					vardef regentime			"regen time"
-					vardef spawnprotect			"spawn protect"
-					vardef spawndelay			"spawn delay"
-					vardef instadelay			"insta spawn delay"
-					vardef trialdelay			"time-trial spawn delay"
 				]
 				guistrut 2
 				guilist [
@@ -554,6 +555,11 @@ newgui game [
 					varfld forcemovecrawl 16
 					varfld forcejumpspeed 16
 					varfld forceimpulsespeed 16
+					varfld forceimpulsestyle 16
+					varfld forceimpulsemeter 16
+					varfld forceimpulsecost 16
+					varfld forceimpulsecount 16
+					varfld forceimpulseskate 16
 					varfld damagescale 16
 					varfld hitpushscale 16
 					varfld deadpushscale 16
@@ -571,14 +577,9 @@ newgui game [
 					varfld itemspawnstyle 16
 					varfld regendelay 16
 					varfld regentime 16
-					varfld spawnprotect 16
-					varfld spawndelay 16
-					varfld instadelay 16
-					varfld trialdelay 16
 				]
 			]
-			guistrut 1
-			guistayopen [ guibutton "^foreset all game variables" [resetvars] "exit" ]
+			guistayopen [ guibutton "^foreset all game variables" [resetvars] ]
 		]
 	]
 	if (> (getvote 0) 0) [
