invert brightness of buttons to match text counterparts on UI, allow override of other phys vars; liquidspeed, liquidcurb, floorcurb, aircurb
Former-commit-id: abbd90611cab719e04628ae305fd9bbb25769a1e

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -430,6 +430,8 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
+					vardef maprotate			"map rotation"
+					vardef spawnrotate			"spawn rotation"
 					vardef selfdamage			"self damage"
 					vardef trialdamage			"time-trial damage"
 					vardef teamdamage			"team damage"
@@ -464,6 +466,8 @@ newgui game [
 				]
 				guistrut 2
 				guilist [
+					varfld maprotate 16
+					varfld spawnrotate 16
 					varfld selfdamage 16
 					varfld trialdamage 16
 					varfld teamdamage 16
@@ -514,8 +518,6 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
-					vardef maprotate			"map rotation"
-					vardef spawnrotate			"spawn rotation"
 					vardef gamespeed			"game speed"
 					vardef forcegravity			"force gravity"
 					vardef forcemovespeed		"force move speed"
@@ -527,6 +529,10 @@ newgui game [
 					vardef forceimpulsecost		"force impulse cost"
 					vardef forceimpulsecount	"force impulse count"
 					vardef forceimpulseskate	"force impulse skate"
+					vardef forceliquidspeed		"force liquid speed"
+					vardef forceliquidcurb		"force liquid curb"
+					vardef forceaircurb			"force air curb"
+					vardef forcemovespeed		"force move speed"
 					vardef damagescale			"damage scale"
 					vardef hitpushscale			"hit push scale"
 					vardef deadpushscale		"dead push scale"
@@ -547,8 +553,6 @@ newgui game [
 				]
 				guistrut 2
 				guilist [
-					varfld maprotate 16
-					varfld spawnrotate 16
 					varfld gamespeed 16
 					varfld forcegravity 16
 					varfld forcemovespeed 16
@@ -560,6 +564,10 @@ newgui game [
 					varfld forceimpulsecost 16
 					varfld forceimpulsecount 16
 					varfld forceimpulseskate 16
+					varfld forceliquidspeed 16
+					varfld forceliquidcurb 16
+					varfld forcefloorcurb 16
+					varfld forceaircurb 16
 					varfld damagescale 16
 					varfld hitpushscale 16
 					varfld deadpushscale 16
