ui colouring fixes and font height correction
Former-commit-id: 5d6dbfe4363ca3605624f8d786acedc3460005b6

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -177,9 +177,9 @@ newgui name [
 		guilist [
 			textlogo
 			guistrut 1
-			guititle "Welcome"
+			guifont "emphasis" [ guitext "Welcome" ]
 			guistrut 1
-			guititle "Please enter your name"
+			guifont "emphasis" [ guitext "^faPlease enter your name" ]
 			guistrut 1
 			guilist [
 				nameval = (getname)
@@ -201,20 +201,20 @@ newgui arena [
 			textlogo
 			guistrut 1
 			if (&& (> (mutators) 0) (& (mutators) 0x0020)) [
-				guititle "arena weapon"
+				guifont "emphasis" [ guitext "choose weapon" ]
 				guistrut 1
-				guibutton "^fwrandom" [arenaweap 1] "action"
+				guibutton "^fgrandom" [arenaweap 1] "action"
 				guibutton "^fyshotgun" [arenaweap 2] "shotgun"
 				guibutton "^fosmg" [arenaweap 3] "smg"
 				guibutton "^frflamer" [arenaweap 4] "flamer"
 				guibutton "^fcplasma" [arenaweap 5] "plasma"
 				guibutton "^fvrifle" [arenaweap 6] "rifle"
 				guistrut 1
-				guibutton "^fgcancel" [cleargui 1] "action"
+				guibutton "cancel" [cleargui 1] "action"
 			] [
-				guititle "sorry"
+				guifont "emphasis" [ guitext "sorry" ]
 				guistrut 1
-				guilist [ guistrut 1; guitext "^frthis is only available in arena" ]
+				guilist [ guistrut 1; guitext "^frthis is only available with arena" ]
 				guistrut 1
 				guibutton "^fgok" [cleargui 1] "action"
 			]
@@ -299,17 +299,22 @@ newgui game [
 	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
 	guilist [
 		guilist [
-			if (< $lastmode 0) [
-				guifont "default" [ guitext "game select" ]
-				guifont "sub" [ guitext "^faplease select a mode and map to continue" ]
-			] [
-				guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
-				guilist [ guifont "sub" [ guitext "^faselected on " ]; guifont "default" [ guitext $mapcur ] ]
+			guilist [
+				guilist [ guistrut 3 ]
+				guilist [
+					if (< $lastmode 0) [
+						guifont "default" [ guitext "game select" ]
+						guifont "sub" [ guitext "^faplease select a mode and map to continue" ]
+					] [
+						guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
+						guilist [ guifont "sub" [ guitext "^faselected on " ]; guifont "default" [ guitext $mapcur ] ]
+					]
+				]
 			]
 			guistrut 1
 			guilist [
 				guilist [
-					guititle "gamemode"
+					guitext "gamemode"
 					guiradio "lobby"						modeselected 1
 					guiradio "editing"						modeselected 2
 					guiradio "story"						modeselected 3
@@ -318,7 +323,7 @@ newgui game [
 					guiradio "capture-the-flag"				modeselected 6
 					guiradio "time-trial"					modeselected 7
 					guistrut 1
-					guititle "mutators"
+					guitext "mutators"
 					if (>= $modeselected 1) [
 						guibitfield "instagib"				mutsselected 0x0004
 						guibitfield "arena"					mutsselected 0x0020
@@ -330,7 +335,7 @@ newgui game [
 								guibitfield "survivor"			mutsselected 0x0010
 							] [ guistrut 2 ]
 						] [ guistrut 4 ]
-					] [ guifont "radar" [ guitext "^fa^fenone available for this mode" ]; guistrut 5 ]
+					] [ guifont "radar" [ guitext "^fanone available for this mode" ]; guistrut 5 ]
 					mutstrying = 0
 					if (!= $mutsselected $mutsbefore) [ loop q 6 [ if (&& (& $mutsselected (<< 1 $q)) (! (& $mutsbefore (<< 1 $q)))) [ mutstrying = (| $mutstrying (<< 1 $q)) ] ] ]
 					mutsselected = (mutscheck $modeselected $mutsselected $mutstrying)
@@ -380,7 +385,7 @@ newgui game [
 					guilist [
 						guilist [ guistrut 28 ]
 						break = 0
-						guilist [ guistrut 8; guifont "sub" [ guitext "^faavailable maps" ] ]
+						guilist [ guitext "available maps" ]
 						loopwhile i $nummaps [if (= $break 0) [ 1 ] [ 0 ]] [
 							if (&& (>= $i $mapindex) (< (- $i $mapindex) $mapscount)) [
 								curmap = (at $maplist $i)
@@ -389,7 +394,7 @@ newgui game [
 										guistrut (- $mapscount $i)
 										nummaps = 1
 										break = 1
-									] [ guilist [ guistrut 7; guifont "radar" [ guitext "^fa^femaps not in the rotation" ] ] ]
+									] [ guifont "radar" [ guitext "^famaps not in the rotation" ] ]
 								] [
 									if (strcmp $curmap "?") [
 										guistrut (- $mapscount $i)
@@ -409,7 +414,7 @@ newgui game [
 					guistrut 1
 					guislider mapindex 0 (max (- $nummaps $mapscount) 0) [] 1
 				]
-				guilist [ guistrut 11; guifont "radar" [ guitext "^fa^fecustom map" ] ]
+				guilist [ guifont "radar" [ guitext "^facustom map" ] ]
 				guilist [
 					guiradio "" mapnum $nummaps
 					mapextraval = $mapextra
@@ -419,7 +424,7 @@ newgui game [
 			guistrut 1
 			guilist [
 				guistrut 12
-				guifont "super" [ guibutton "^fr^fecancel" [cleargui 1] ]
+				guifont "super" [ guibutton "^frcancel" [cleargui 1] ]
 				guistrut 2
 				guifont "super" [ guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) ]
 			]
