fix ordering of toggle editing/console labels
Former-commit-id: 9e6a9275620d67a39a8bb9c9cd99d0baa2a4b7b8

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -1350,7 +1350,7 @@ bindnames = [
 	forward backward left right "scroll up" "scroll down" "enter spectator" "exit spectator"
 	"attack" "alt-attack" "reload" "use" "jump" "sprint" "crouch" "impulse"
 	"drop weapon" melee pistol shotgun smg flamer plasma grenade insta
-	"cmd input" "all chat" "team chat" "toggle editing" "toggle console" "toggle input"
+	"cmd input" "all chat" "team chat" "toggle console" "toggle editing" "toggle input"
 	"add bot" "delete bot" "game menu" "vote menu" "claim master" "arena menu"
 ]
 
