--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -126,7 +126,7 @@ bind K				[ kill ]
 bind TAB			[ showscores ]
 
 saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/conopen"]
-sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "textures/" (getteamicon))]
+sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (getteamicon)]
 
 bind T				[ saytextcommand ]
 bind BACKQUOTE		"saycommand /"
