game menu bug fixes and cleanup
Former-commit-id: d2ad7513bf9194a314d5bd00638cc8579bca49ab

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -269,18 +269,20 @@ newgui game [
 				mappath = (concat $mappath (concatword "maps/" $lcurmap))
 			]
 		]
-		maplist = (concat $maplist "*")
-		mappath = (concat $mappath "*");
-		loopfiles lcurmap maps bgz [
-			if (< (listfind mcurmap $maplist [strcmp $mcurmap $lcurmap]) 0) [
-				maplist = (concat $maplist $lcurmap)
-				mappath = (concat $mappath (concatword "maps/" $lcurmap))
+		if (!= $modeselected 3) [
+			maplist = (concat $maplist "*")
+			mappath = (concat $mappath "*");
+			loopfiles lcurmap maps bgz [
+				if (< (listfind mcurmap $maplist [strcmp $mcurmap $lcurmap]) 0) [
+					maplist = (concat $maplist $lcurmap)
+					mappath = (concat $mappath (concatword "maps/" $lcurmap))
+				]
 			]
-		]
-		if (&& (> $hasoctapaks 0) (> $mapocta 0)) [
-			loopfiles lcurmap base ogz [
-				maplist = (concat $maplist $lcurmap)
-				mappath = (concat $mappath (concatword "base/" $lcurmap))
+			if (&& (> $hasoctapaks 0) (> $mapocta 0)) [
+				loopfiles lcurmap base ogz [
+					maplist = (concat $maplist $lcurmap)
+					mappath = (concat $mappath (concatword "base/" $lcurmap))
+				]
 			]
 		]
 		maplist = (concat $maplist "?")
@@ -290,10 +292,11 @@ newgui game [
 		] [
 			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapcur) (strcmp (concatword "maps/" $curmap) $mapcur)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapcur)))])
 		]
-		if (&& (|| (< $mapnum 0) (= (strcmp "*" (at $maplist $mapnum)) 0)) (= (strcmp "maps/untitled" $mapname) 0)) [ mapnum = (- (listlen $maplist) 1); mapextra = $mapname ]
+		if (strcmp "*" (at $maplist $mapnum)) [ mapnum = 0 ] [ if (< $mapnum 0) [ mapnum = (- (listlen $maplist) 1); mapextra = $mapname ] ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		mutsbefore = $mutsselected
+		mapindex = 0
 		showngamegui = 1
 	]
 	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
@@ -377,37 +380,22 @@ newgui game [
 		guilist [
 			if (>= $lastmode 0) [
 				guilist [
+					guilist [ guistrut (+ $maplistsize 1) ]
 					mapscount = $maplistsize
-					//if (> $hasoctapaks 0) [ mapscount = (- $mapscount 2) ]
 					nummaps = (- (listlen $maplist) 1)
 					mapindex = (min (max 0 (- $nummaps $mapscount)) $mapindex) //safeguard
 					mapnum = (min $mapnum $nummaps)
 					guilist [
 						guilist [ guistrut 28 ]
-						break = 0
 						guilist [ guitext "available maps" ]
-						loopwhile i $nummaps [if (= $break 0) [ 1 ] [ 0 ]] [
-							if (&& (>= $i $mapindex) (< (- $i $mapindex) $mapscount)) [
-								curmap = (at $maplist $i)
-								if (strcmp $curmap "*") [
-									if (= $modeselected 3) [
-										guistrut (- $mapscount $i)
-										nummaps = 1
-										break = 1
-									] [ guifont "radar" [ guitext "^famaps not in the rotation" ] ]
-								] [
-									if (strcmp $curmap "?") [
-										guistrut (- $mapscount $i)
-										nummaps = 1
-										break = 1
-									] [ guiradio $curmap mapnum $i ]
-								]
+						break = 0
+						loopwhile i $mapscount [if (= $break 0) [ 1 ] [ 0 ]] [
+							q = (+ $mapindex $i)
+							curmap = (at $maplist $q)
+							if (strcmp $curmap "*") [
+								guifont "radar" [ guitext "^famaps not in the rotation" ]
 							] [
-								if (&& (strcmp $curmap "*")  (= $modeselected 3)) [
-									guistrut (- $mapscount $i)
-									nummaps = 1
-									break = 1
-								]
+								if (strcmp $curmap "?") [ break = 1 ] [ guiradio $curmap mapnum $q ]
 							]
 						]
 					]
