--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -25,6 +25,10 @@ newgui main [
 				guibutton	"show votes"		"showgui vote"
 				guistrut 1
 			]
+			if (> (ircconns) 0) [
+				guibutton	"irc dialog"		"showgui irc"
+				guistrut 1
+			]
 			guibutton		"quick play" 		"localconnect"
 			guibutton 		"play online"		"showgui servers"
 			guibutton		"start game" 		"showgui game"
