--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -528,8 +528,8 @@ newgui game [
 					vardef forceimpulseskate	"force impulse skate"
 					vardef forceliquidspeed		"force liquid speed"
 					vardef forceliquidcurb		"force liquid curb"
+					vardef forcefloorcurb		"force floor curb"
 					vardef forceaircurb			"force air curb"
-					vardef forcemovespeed		"force move speed"
 					vardef damagescale			"damage scale"
 					vardef hitpushscale			"hit push scale"
 					vardef deadpushscale		"dead push scale"
