game select menu failsafe for failsafe
Former-commit-id: 3f95065d0863242be2de8f438a03647dccf945e8

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -296,7 +296,9 @@ newgui game [
 		] [
 			mapnum = (listfind curmap $maplist [(|| (|| (strcmp $curmap $mapcur) (strcmp (concatword "maps/" $curmap) $mapcur)) (&& (&& (> $hasoctapaks 0) (> $mapocta 0)) (strcmp (concatword "base/" $curmap) $mapcur)))])
 		]
-		if (strcmp "*" (at $maplist $mapnum)) [ mapnum = 0 ] [ if (< $mapnum 0) [ mapnum = (- (listlen $maplist) 1); mapextra = $mapname ] ]
+		if (>= $lastmode 0) [
+			if (strcmp "*" (at $maplist $mapnum)) [ mapnum = 0 ] [ if (< $mapnum 0) [ mapnum = (- (listlen $maplist) 1); mapextra = $mapname ] ]
+		]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		mutsbefore = $mutsselected
